--- a/Frontend/CSS/index.css
+++ b/Frontend/CSS/index.css
@@ -1,5 +1,5 @@
 body{
-    margin: 0;
+    padding: 0;
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: repeat(6,1fr);
